--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "firebase": "^7.21.0",
+    "firebase-admin": "^9.2.0",
     "next": "9.5.3",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   },
   "devDependencies": {
-    "typescript": "^4.0.3",
     "@types/node": "^14.11.1",
-    "@types/react": "^16.9.49"
+    "@types/react": "^16.9.49",
+    "typescript": "^4.0.3"
   }
 }
