--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^7.21.0",
     "firebase-admin": "^9.2.0",
     "next": "9.5.3",
+    "nookies": "^2.4.0",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   },
