--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^14.1.1",
+    "contentful": "^7.14.6",
     "firebase": "^7.21.0",
     "firebase-admin": "^9.2.0",
     "next": "9.5.3",
